Better Documentation Code cleanup Added CHANGELOG file Added info.php for Apidocs

--- a/README
+++ b/README
@@ -65,7 +65,7 @@ Installation in 3 steps:
 *  [3.] `Setup in the Administration`
 Now you are ready and it will print
 
-
+More information in the INSTALL file
 
 Frequently Asked Questions
 --------------
@@ -77,18 +77,7 @@ None yet
 Changelog
 --------------
 
-### 0.0.1
-
-* First release.
-
-
-
-Upgrade Notice
---------------
-
-### 0.0.1
-
-* First release.
+See CHANGELOG file
 
 
 
@@ -99,4 +88,16 @@ More informations
 [Blog]: http://projects.ruben-storm.eu/wpms-network-global-inserts/
 [GNU General Public License]: http://www.gnu.org/licenses/gpl.html
 
+WordPress Plugin Devlopment
+------------
+This has to be on top of the first, main file
 
+/**
+Plugin Name: WPMS Network Global Inserts
+Plugin URI: http://projects.ruben-storm.eu/wpms-network-global-inserts/
+Description: WPMS Network Global Inserts allow wordpress multisite network admin to insert html in the content accross the network
+Version: 0.0.1
+Author: Ruben Storm
+Author URI: http://ruben-storm.eu
+License: GPLv3
+ */
